@@ -1,3 +1,8 @@
+2005-01-02  Earnie Boyd  <earnie@users.sf.net>
+
+	* include/_mingw.h: Increment version to 3.6
+	* Makefile.in: Ditto
+
 2004-12-26  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* mingwex/complex/(cabsf.c cacosf.c cacoshf.c cargf.c casinf.c
